# verbatim

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.md  build.ps1  build.py  compile_flags.txt  settings.json  vcpkg.json
include/: edlfile.hpp  edlfile.hxx  errors.hpp  errors.hxx  functional.hpp  io.hpp  io.hxx  locale.hpp  locale.hxx  macros.hpp  timecode.hpp  timecode_common.hpp  timecode_float.hpp  timecode_int.hpp  traits.hpp  utility.hpp
tests/: CMakeLists.txt  edlfile.test.cpp  fps.test.cpp  functional.test.cpp  streamio.test.cpp  timecode.test.cpp  timecode_example.test.cpp  timecode_float.test.cpp  timecode_int.bench.cpp  timecode_int.test.cpp
